<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/settings_fragment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"/>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragment_rb_google"/>
        <RadioButton
            android:id="@+id/rYandex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragment_rb_yandex"/>
        <RadioButton
            android:id="@+id/rBing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragment_rb_bing"/>
    </RadioGroup>

</LinearLayout>